# commando

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile.gateway  README.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
config/: agent.toml.example  gateway.toml.example
crates/commando-agent/: Cargo.toml
crates/commando-agent/src/: config.rs  lib.rs  main.rs  process.rs  rpc.rs  wrapper.rs
crates/commando-cli/: Cargo.toml
crates/commando-cli/src/: main.rs
crates/commando-common/: Cargo.toml  build.rs
crates/commando-common/src/: auth.rs  lib.rs
crates/commando-gateway/: Cargo.toml
crates/commando-gateway/src/: audit.rs  config.rs  handler.rs  lib.rs  main.rs  mcp.rs  proxmox.rs  registry.rs  rest.rs  rpc.rs  session.rs  sse.rs  streamable.rs  types.rs
crates/commando-gateway/src/tools/: commando_exec.json  commando_list.json  commando_output.json  commando_ping.json
crates/commando-gateway/tests/: integration.rs  sse.rs  streamable.rs
deploy/: commando-agent.service  deploy-agents.sh  deploy-gateway.sh  install-agent.sh  install-cli.sh  update-agents.sh
docs/: SUGGESTIONS.md  TODO-public-release.md  design.md
docs/superpowers/plans/: 2026-03-10-commando.md  2026-03-11-sse-transport.md  2026-03-11-streamable-http-transport.md  2026-03-12-public-release-low-hanging-fruit.md  2026-03-12-streaming-exec.md  2026-03-14-commando-cli.md
docs/superpowers/specs/: 2026-03-11-public-release-low-hanging-fruit-design.md  2026-03-11-sse-transport-design.md  2026-03-11-streamable-http-transport-design.md  2026-03-12-mcp-bearer-auth-design.md  2026-03-12-streaming-exec-design.md  2026-03-14-commando-cli-design.md
schema/: commando.capnp
