[package]
name = "commando-agent"
version.workspace = true
edition.workspace = true

[dependencies]
commando-common = { path = "../commando-common" }
capnp = { workspace = true }
capnp-rpc = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
libc = "0.2"
uuid = { version = "1", features = ["v4"] }
