[package]
name = "commando-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "commando"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
clap = { version = "4", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["rt", "macros"] }
