[package]
name = "commando-gateway"
version.workspace = true
edition.workspace = true

[dependencies]
commando-common = { path = "../commando-common" }
capnp = { workspace = true }
capnp-rpc = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
axum = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
subtle = "2"
rand = "0.9"
hex = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
commando-agent = { path = "../commando-agent" }
tempfile = "3"
